FA-47: Delete user api. Removed join table for unconfirmed user.
